WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250335
REGRESSION (
258521@main
): Can end up scrolled to an invalid offset, blank space above page
https://bugs.webkit.org/show_bug.cgi?id=250335
Summary
REGRESSION (258521@main): Can end up scrolled to an invalid offset, blank spa...
Tim Horton
Reported
2023-01-09 12:44:28 PST
REGRESSION (
258521@main
): Can end up scrolled to an invalid offset, blank space above page
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-01-09 12:44:33 PST
<
rdar://problem/103977580
>
Tim Horton
Comment 2
2023-01-09 12:45:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8412
EWS
Comment 3
2023-01-09 14:54:16 PST
Committed
258687@main
(6e41546bc076): <
https://commits.webkit.org/258687@main
> Reviewed commits have been landed. Closing PR #8412 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug