REGRESSION (258521@main): Can end up scrolled to an invalid offset, blank space above page https://bugs.webkit.org/show_bug.cgi?id=250335 rdar://103977580

Reviewed by Dean Jackson and Megan Gardner.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _updateScrollViewForTransaction:]):
Ensure that we don't scroll to an invalid offset, the same way we do elsewhere.

Canonical link: https://commits.webkit.org/258687@main